--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 Create Vercel acount
-Create WebHook
+Create WebHook     <-- este esta mas o menos hecho xq cuando mando un msg el bot se activa en unos segundos
 Download torrent
 Download Youtube 
 Use llama AI
+Contestar Mensajes Antiguos
