--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
-hacer cola de errores para mandar en un .log a los admins
+4-hacer mejor el gestor de comandos (me pesa)
+5-crear api para la web (usuarios y sus datos)
